Press page update

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -848,7 +848,7 @@
 					<key>page13 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-01T15:10:55Z</date>
+						<date>2018-08-01T15:11:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1157,11 +1157,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								l/8eg3P5cvHg
-								bGpTTE5fsQ==
+								GeNdjEBZdDsJ
+								8Hqme5WzEg==
 								</data>
 								<key>Size</key>
-								<integer>120499</integer>
+								<integer>119325</integer>
 							</dict>
 							<key>files/stacks_page_page13.js</key>
 							<dict>
@@ -1177,11 +1177,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								s3Px+XejMCEn
-								wVYtSynQXw==
+								IkOS5QAzCuAU
+								z+XSN3Fojw==
 								</data>
 								<key>Size</key>
-								<integer>65101</integer>
+								<integer>64523</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8130,7 +8130,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-07-27T17:29:30Z</date>
+						<date>2018-08-01T15:11:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8179,11 +8179,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RJTIt1rpvzF2
-								eNEURf6bZg==
+								r/+DOiluoN6e
+								NT00mppRpQ==
 								</data>
 								<key>Size</key>
-								<integer>3754</integer>
+								<integer>3786</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8232,7 +8232,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-01T15:10:55Z</date>
+						<date>2018-08-01T15:11:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9271,11 +9271,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								JbsRLQ+u+Ptr
-								kenqwsFOQQ==
+								L2HjKW4hZl19
+								FhldVRXEmw==
 								</data>
 								<key>Size</key>
-								<integer>3179</integer>
+								<integer>3771</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9359,7 +9359,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAiQKAzRG+gAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAiQKanztcgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -9370,7 +9370,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCJAoDNDPaA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCJApqfNzOA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
