--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/3-Press-/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/3-Press-/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-01T15:10:55Z</date>
+						<date>2018-08-01T15:11:47Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -342,11 +342,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								l/8eg3P5cvHg
-								bGpTTE5fsQ==
+								GeNdjEBZdDsJ
+								8Hqme5WzEg==
 								</data>
 								<key>Size</key>
-								<integer>120499</integer>
+								<integer>119325</integer>
 							</dict>
 							<key>files/stacks_page_page13.js</key>
 							<dict>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								s3Px+XejMCEn
-								wVYtSynQXw==
+								IkOS5QAzCuAU
+								z+XSN3Fojw==
 								</data>
 								<key>Size</key>
-								<integer>65101</integer>
+								<integer>64523</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
