added new url for apply now links  degree programs
added new url for apply now links  degree programs

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -64,7 +64,7 @@
 					<key>page0 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-01T23:22:04Z</date>
+						<date>2018-08-02T13:24:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -383,11 +383,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sBYS+KHwDX9C
-								V3ORaf+ppg==
+								7QNatJYAOV1h
+								ylA4zhDZsQ==
 								</data>
 								<key>Size</key>
-								<integer>148566</integer>
+								<integer>148541</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4776,7 +4776,7 @@
 					<key>page47 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-01T23:22:04Z</date>
+						<date>2018-08-02T13:24:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5005,11 +5005,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fRikDa9qy8Gb
-								USVNPiOIeg==
+								0PXB9KB6Aq0V
+								EJ9cZ0wJjA==
 								</data>
 								<key>Size</key>
-								<integer>91526</integer>
+								<integer>91550</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -7894,7 +7894,7 @@
 					<key>page7 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-01T23:22:04Z</date>
+						<date>2018-08-02T13:24:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8143,11 +8143,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tp42vYtEgvz/
-								JLUl3OY2KQ==
+								1RgTAokPLfg0
+								ADwLubYCMw==
 								</data>
 								<key>Size</key>
-								<integer>121401</integer>
+								<integer>121376</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8434,7 +8434,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-01T23:22:04Z</date>
+						<date>2018-08-02T13:24:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9473,11 +9473,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FpbmxE6QfsOZ
-								/Hu15tHsVA==
+								CczgcQS6z/xA
+								kUK5wOQMvw==
 								</data>
 								<key>Size</key>
-								<integer>3919</integer>
+								<integer>3290</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -9577,31 +9577,31 @@
 				ZW1vdGVSZXNvdXJjZVxQdWJsaXNoZWRVUkxdUHVibGlz
 				aGVkRGF0ZV8QD0NoYW5nZWRTdGF0dXNlc1ROYW1lWklk
 				ZW50aWZpZXJZVGltZVN0YW1wWUZpbGVUb2tlbgiAEIAA
-				gACADIAIgAeACoAJXxAkQzVCNDUxNEYtNkVCOS00OUM1
-				LTk1RkItRDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0
-				aWNpcGFudHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVk
-				dWxlLnBkZl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFF
-				LTU3QjlBNzZEQjMxM9I6Czs8V05TLnRpbWUjQcCJPBE+
-				3UCAC9I+P0BBWiRjbGFzc25hbWVYJGNsYXNzZXNWTlNE
-				YXRlokBCWE5TT2JqZWN00wkKC0RGSKFFgA2hR4AOgA9f
-				EC1zZnRwOi9jbXBseHN5cy53My51dm0uZWR1L3d3dy1y
-				b290L3RlbXBsYXRlcnkI0j4/TE1fEBNOU011dGFibGVE
-				aWN0aW9uYXJ5o0xOQlxOU0RpY3Rpb25hcnnSPj9QUV5S
-				V1NpdGVSZXNvdXJjZaJSQl5SV1NpdGVSZXNvdXJjZdkl
-				CyYnKCkqKywtLi8vWFlaW1wIgBCAAIAAgBaAE4ASgBWA
-				FF8QJDJFOEM3RERDLUFFQjQtNDFGQi1CRkVELUU2QjhD
-				MEQ0N0M5M18QI1BGRCBmb3IgcGFydGljaXBhbnRzIEhX
-				QiBBZ2VuZGEucGRmXxAkNUY4MDY4RDUtMDQ4Mi00MTAy
-				LUE3N0EtMTg1NkVGMDlGQUVF0joLYTwjQcCJPBE+4KCA
+				gACADIAIgAeACoAJXxAkMkU4QzdEREMtQUVCNC00MUZC
+				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
+				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
+				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
+				PFdOUy50aW1lI0HAiZ7N/QIlgAvSPj9AQVokY2xhc3Nu
+				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
+				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
+				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
+				P0xNXxATTlNNdXRhYmxlRGljdGlvbmFyeaNMTkJcTlNE
+				aWN0aW9uYXJ50j4/UFFeUldTaXRlUmVzb3VyY2WiUkJe
+				UldTaXRlUmVzb3VyY2XZJQsmJygpKissLS4vL1hZWltc
+				CIAQgACAAIAWgBOAEoAVgBRfECRDNUI0NTE0Ri02RUI5
+				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
+				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
+				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCJns39BbiA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
-				ckiiM1qAB4ASoiEigAaAEYAP0wkKC3d6SKIzWoAHgBKi
-				e3yAG4AggA/UC3+AgYKDESFYQ2hpbGRyZW5WUGFyZW50
-				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegAbSCguH
+				ckiiWjOAEoAHoiIhgBGABoAP0wkKC3d6SKJaM4ASgAei
+				e3yAG4AggA/UC3+AgYKDESJYQ2hpbGRyZW5WUGFyZW50
+				XxASUmVwcmVzZW50ZWQgT2JqZWN0gCKAHIAegBHSCguH
 				iKCAHdI+P4qLXk5TTXV0YWJsZUFycmF5o4qMQldOU0Fy
 				cmF51At/gIGCjy8vgCKAH4AAgADSCguTiKJ7fIAbgCCA
-				HdQLf4CBgpkRIoAigCGAHoAR0goLnYiggB3SPj+goV8Q
+				HdQLf4CBgpkRIYAigCGAHoAG0goLnYiggB3SPj+goV8Q
 				EFJXU291cmNlTGlzdE5vZGWiokJfEBBSV1NvdXJjZUxp
 				c3ROb2Rl0wkKC6SlSKCggA/SPj+oqV8QElJXUmVzb3Vy
 				Y2VEYXRhYmFzZaKqQl8QElJXUmVzb3VyY2VEYXRhYmFz
@@ -9609,9 +9609,9 @@
 				b3SAAQAIABEAGgAjAC0AMgA3AGAAZgBtAHUAgACHAIoA
 				jACOAJEAkwCVAJcAoAClALAAvwDIANEA2wDdAN8A4QDj
 				AOUA6gDtAO8A8QDzAQYBFQEiATABQgFHAVIBXAFmAWcB
-				aQFrAW0BbwFxAXMBdQF3AZ4B1QH8AgECCQISAhQCGQIk
-				Ai0CNAI3AkACRwJJAksCTQJPAlECgQKCAocCnQKhAq4C
-				swLCAsUC1ALnAugC6gLsAu4C8ALyAvQC9gL4Ax8DRQNs
+				aQFrAW0BbwFxAXMBdQF3AZ4BxAHrAfAB+AIBAgMCCAIT
+				AhwCIwImAi8CNgI4AjoCPAI+AkACcAJxAnYCjAKQAp0C
+				ogKxArQCwwLWAtcC2QLbAt0C3wLhAuMC5QLnAw4DRQNs
 				A3EDegN8A4MDhQOHA4kDiwONA70DwgPPA9MD2QPgA+MD
 				5QPnA+oD7APuA/AD9wP6A/wD/gQBBAMEBQQHBBAEGQQg
 				BDUENwQ5BDsEPQRCBEMERQRKBFkEXQRlBG4EcARyBHQE
