--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/2-Certificate-of-Graduate-Study-in-Complex-Systems/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-01T23:22:04Z</date>
+						<date>2018-08-02T13:24:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fRikDa9qy8Gb
-								USVNPiOIeg==
+								0PXB9KB6Aq0V
+								EJ9cZ0wJjA==
 								</data>
 								<key>Size</key>
-								<integer>91526</integer>
+								<integer>91550</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
