--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-01T23:22:04Z</date>
+						<date>2018-08-02T13:24:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sBYS+KHwDX9C
-								V3ORaf+ppg==
+								7QNatJYAOV1h
+								ylA4zhDZsQ==
 								</data>
 								<key>Size</key>
-								<integer>148566</integer>
+								<integer>148541</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
