--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/4-PhD-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-01T23:22:04Z</date>
+						<date>2018-08-02T13:24:41Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -282,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								tp42vYtEgvz/
-								JLUl3OY2KQ==
+								1RgTAokPLfg0
+								ADwLubYCMw==
 								</data>
 								<key>Size</key>
-								<integer>121401</integer>
+								<integer>121376</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
