--- a/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/5-Students/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/5-Students/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-03T17:11:23Z</date>
+						<date>2018-08-03T17:12:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -72,18 +72,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								amsIfzaH+bpA
-								FztWcgbFTw==
+								Vk+mEpfOpvHZ
+								ZBSBAEqDYg==
 								</data>
 								<key>Size</key>
-								<integer>97620</integer>
+								<integer>90919</integer>
 							</dict>
 							<key>files/stacks_page_page31.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								JYZnIXDoOh/3
-								N44+ptoDUA==
+								ig4VYdwQseos
+								0tdIJ4qOZw==
 								</data>
 								<key>Size</key>
 								<integer>24349</integer>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								27+1NUU//B0d
-								yyl2Pbs7YQ==
+								HZuI62ddwvz1
+								BUQ6vFyW4A==
 								</data>
 								<key>Size</key>
-								<integer>35734</integer>
+								<integer>31445</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
