Revert "Merge branch 'master' of https://github.com/computationalstorylab/teamsites"
This reverts commit b64aabbd62d6b5d9291c1bc50f86546b9baa27a1, reversing
changes made to 7a4a4362404cce56d9b9af4edcb46bdb35ff7f5b.

--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-04T18:02:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Mtx3ZSHgamWc
-								vYUvmkaw0g==
+								jXTfj9nDmtFG
+								PSXCoIbeIg==
 								</data>
 								<key>Size</key>
-								<integer>71090</integer>
+								<integer>69882</integer>
 							</dict>
 							<key>index_files/medium_526602.png</key>
 							<dict>
@@ -324,11 +324,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								i+yieVvVrtAq
-								Aw9N6m+0OA==
+								i6e0/5zXn6tc
+								n05X9X6czA==
 								</data>
 								<key>Size</key>
-								<integer>144542</integer>
+								<integer>142218</integer>
 							</dict>
 							<key>index_files/stacks_page_page1.js</key>
 							<dict>
