--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/3-Masters-in-Complex-Systems-and-Data-Science/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -278,25 +278,25 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<key>files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>34013</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
+							<key>files/stacks-image-ce6b280.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>19050</integer>
 							</dict>
 							<key>files/stacks_in_p306464_n7_page0_export.php</key>
 							<dict>
@@ -342,11 +342,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								h9y2lkYDVm5q
-								4+/MuptHNQ==
+								kgnIMNGeEJld
+								tW3wP/1Exg==
 								</data>
 								<key>Size</key>
-								<integer>233824</integer>
+								<integer>232734</integer>
 							</dict>
 							<key>files/stacks_page_page0.js</key>
 							<dict>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7SJmAqWAscfW
-								4NNA5nb5Ng==
+								/lhyLDytYoLB
+								BVEI+uLY9A==
 								</data>
 								<key>Size</key>
-								<integer>155113</integer>
+								<integer>154104</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
