--- a/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/05-003Cheader003EEducation003C002Fheader003E/ChildPages/Contents.plist
@@ -13,12 +13,12 @@
 			<array/>
 			<key>Subsandwiches</key>
 			<array>
-				<string>1-Undergraduate-Degrees</string>
+				<string>1-Undergraduate-degrees</string>
 				<string>2-Certificate-of-Graduate-Study-in-Complex-Systems</string>
 				<string>3-Masters-in-Complex-Systems-and-Data-Science</string>
 				<string>4-PhD-in-Complex-Systems-and-Data-Science</string>
-				<string>5-Potential-Funding</string>
-				<string>6-Sample-Lectures</string>
+				<string>5-Potential-funding</string>
+				<string>6-Sample-lectures</string>
 				<string>7-All-courses</string>
 			</array>
 		</dict>
