--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/4-Call-for-Fellows/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/4-Call-for-Fellows/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,11 +44,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								PZgQe4Jb3VYl
-								buB9HUOtrA==
+								34tpInI/lRAl
+								/AKeHqbHSA==
 								</data>
 								<key>Size</key>
-								<integer>40398</integer>
+								<integer>41409</integer>
 							</dict>
 							<key>index_files/backgroundImage_110306.png</key>
 							<dict>
@@ -80,25 +80,25 @@
 								<key>Size</key>
 								<integer>60972</integer>
 							</dict>
-							<key>index_files/stacks-image-580baf6-248x248.jpg</key>
+							<key>index_files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>34013</integer>
 							</dict>
-							<key>index_files/stacks-image-90966db-250x250.png</key>
+							<key>index_files/stacks-image-ce6b280.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>19050</integer>
 							</dict>
 							<key>index_files/stacks-image-d2c4351-164x250.png</key>
 							<dict>
@@ -114,11 +114,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NakNSiqtzsNA
-								+w7zck+oVw==
+								MRlLwp/EMd0z
+								6WZUe9WwpQ==
 								</data>
 								<key>Size</key>
-								<integer>104159</integer>
+								<integer>106577</integer>
 							</dict>
 							<key>index_files/stacks_page_page65.js</key>
 							<dict>
