--- a/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/08-003Cheader003EPeople003C002Fheader003E/ChildPages/Contents.plist
@@ -13,7 +13,7 @@
 			<array/>
 			<key>Subsandwiches</key>
 			<array>
-				<string>1-Open-Positions</string>
+				<string>1-Open-positions</string>
 				<string>2-Core-Team</string>
 				<string>3-Associated-Faculty</string>
 				<string>4-Postdocs</string>
