--- a/vermontcomplexsystems-foundation.rw/Pages/09-Donate/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/09-Donate/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -58,35 +58,35 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<key>files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>34013</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
+							<key>files/stacks-image-ce6b280.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>19050</integer>
 							</dict>
 							<key>files/stacks_page_page15.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								sq7CVO7+gKHQ
-								dOoe4NW7RA==
+								iDTmh/9iERhL
+								CIJavLp9/Q==
 								</data>
 								<key>Size</key>
-								<integer>97889</integer>
+								<integer>100307</integer>
 							</dict>
 							<key>files/stacks_page_page15.js</key>
 							<dict>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jGg5RZ5sozXN
-								+9geN9Z1mQ==
+								qeGZoEZtQYN3
+								3mhZ3vErjw==
 								</data>
 								<key>Size</key>
-								<integer>36515</integer>
+								<integer>37526</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
