--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/3-Press-/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/3-Press-/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -168,16 +168,6 @@
 								<key>Size</key>
 								<integer>36737</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
-								</data>
-								<key>Size</key>
-								<integer>13349</integer>
-							</dict>
 							<key>files/stacks-image-592e55b-1198x694.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -248,16 +238,6 @@
 								<key>Size</key>
 								<integer>30576</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
-								</data>
-								<key>Size</key>
-								<integer>21870</integer>
-							</dict>
 							<key>files/stacks-image-931e159.png</key>
 							<dict>
 								<key>Digest</key>
@@ -267,6 +247,16 @@
 								</data>
 								<key>Size</key>
 								<integer>14603</integer>
+							</dict>
+							<key>files/stacks-image-a5b6257.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
+								</data>
+								<key>Size</key>
+								<integer>34013</integer>
 							</dict>
 							<key>files/stacks-image-ac0a62a-150x98.jpg</key>
 							<dict>
@@ -297,6 +287,16 @@
 								</data>
 								<key>Size</key>
 								<integer>8470</integer>
+							</dict>
+							<key>files/stacks-image-ce6b280.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
+								</data>
+								<key>Size</key>
+								<integer>19050</integer>
 							</dict>
 							<key>files/stacks-image-d1216db-150x112.jpg</key>
 							<dict>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZpywzqJ8FE/G
-								EIhbmZIsSQ==
+								z2TkFDhm+bDG
+								hSMt+k6TBw==
 								</data>
 								<key>Size</key>
-								<integer>126050</integer>
+								<integer>128468</integer>
 							</dict>
 							<key>files/stacks_page_page13.js</key>
 							<dict>
@@ -372,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GXhAEiDX3df/
-								wrHNeDGdew==
+								zL9OuXNYqgv4
+								Rsy1r7HVjA==
 								</data>
 								<key>Size</key>
-								<integer>69675</integer>
+								<integer>70695</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
