--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/5-Funding/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/5-Funding/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -48,16 +48,6 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
-								</data>
-								<key>Size</key>
-								<integer>13349</integer>
-							</dict>
 							<key>files/stacks-image-8b170b9.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -67,16 +57,6 @@
 								</data>
 								<key>Size</key>
 								<integer>7558</integer>
-							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
-								</data>
-								<key>Size</key>
-								<integer>21870</integer>
 							</dict>
 							<key>files/stacks-image-9d5546e-150x188.png</key>
 							<dict>
@@ -98,6 +78,16 @@
 								<key>Size</key>
 								<integer>19246</integer>
 							</dict>
+							<key>files/stacks-image-a5b6257.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
+								</data>
+								<key>Size</key>
+								<integer>34013</integer>
+							</dict>
 							<key>files/stacks-image-b438d3e-150x150.png</key>
 							<dict>
 								<key>Digest</key>
@@ -118,15 +108,25 @@
 								<key>Size</key>
 								<integer>7771</integer>
 							</dict>
+							<key>files/stacks-image-ce6b280.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
+								</data>
+								<key>Size</key>
+								<integer>19050</integer>
+							</dict>
 							<key>files/stacks_page_page25.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								10AkG49K/zX5
-								3gSL1JgLjQ==
+								TFtU0vIqEhbY
+								/uyKgsotww==
 								</data>
 								<key>Size</key>
-								<integer>105412</integer>
+								<integer>107830</integer>
 							</dict>
 							<key>files/stacks_page_page25.js</key>
 							<dict>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4j6xvrM67twG
-								+sonmSUblQ==
+								fNdnA9MOd7mr
+								O10z/IRIwA==
 								</data>
 								<key>Size</key>
-								<integer>45188</integer>
+								<integer>44729</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
