--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Events-Calendar/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Events-Calendar/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -108,35 +108,35 @@
 								<key>Size</key>
 								<integer>78092</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<key>files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>34013</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
+							<key>files/stacks-image-ce6b280.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>19050</integer>
 							</dict>
 							<key>files/stacks_page_page60.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								rrK+aEEsgM1W
-								ugl4wnqKYw==
+								Fiyf4/p070dv
+								oJfobTq+NQ==
 								</data>
 								<key>Size</key>
-								<integer>110968</integer>
+								<integer>113386</integer>
 							</dict>
 							<key>files/stacks_page_page60.js</key>
 							<dict>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/k+skhUjgZCe
-								V+rQzysK2w==
+								Gj7FjZ72V3Mo
+								LQ3WGrwwsw==
 								</data>
 								<key>Size</key>
-								<integer>50002</integer>
+								<integer>51013</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
