--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Health-and-Wellness/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -160,16 +160,6 @@
 								<key>Size</key>
 								<integer>90979</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
-								</data>
-								<key>Size</key>
-								<integer>13349</integer>
-							</dict>
 							<key>files/stacks-image-678f5ae-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -220,16 +210,6 @@
 								<key>Size</key>
 								<integer>380074</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
-								</data>
-								<key>Size</key>
-								<integer>21870</integer>
-							</dict>
 							<key>files/stacks-image-9268316-250x303.png</key>
 							<dict>
 								<key>Digest</key>
@@ -279,6 +259,16 @@
 								</data>
 								<key>Size</key>
 								<integer>553274</integer>
+							</dict>
+							<key>files/stacks-image-a5b6257.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
+								</data>
+								<key>Size</key>
+								<integer>34013</integer>
 							</dict>
 							<key>files/stacks-image-bcdb310-250x261.png</key>
 							<dict>
@@ -340,6 +330,16 @@
 								<key>Size</key>
 								<integer>398721</integer>
 							</dict>
+							<key>files/stacks-image-ce6b280.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
+								</data>
+								<key>Size</key>
+								<integer>19050</integer>
+							</dict>
 							<key>files/stacks-image-e5aa8ea-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -374,11 +374,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CO8zbp/lhNro
-								NEIfJYIMag==
+								oVfUZxKQaNxF
+								thQfrUzxUQ==
 								</data>
 								<key>Size</key>
-								<integer>196477</integer>
+								<integer>185981</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -394,11 +394,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KGaLVE8XOO8A
-								Z8KQ8hlXMw==
+								NHibq+Oflai1
+								bX0pFcxAoQ==
 								</data>
 								<key>Size</key>
-								<integer>126557</integer>
+								<integer>121210</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
