--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Symposium---Science-of-stories/Contents.plist
@@ -16,7 +16,7 @@
 				<key>MostRecentlySelectedStyleName</key>
 				<string>Theme Default</string>
 				<key>PageTitle</key>
-				<string>Symposium - Science of Stories</string>
+				<string>Symposium - Science of stories</string>
 				<key>PluginClassName</key>
 				<string>YHStacksPlugin</string>
 				<key>PluginMetadata</key>
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -148,16 +148,6 @@
 								<key>Size</key>
 								<integer>462108</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
-								</data>
-								<key>Size</key>
-								<integer>13349</integer>
-							</dict>
 							<key>files/stacks-image-8364b1f-250x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -198,16 +188,6 @@
 								<key>Size</key>
 								<integer>331007</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
-								</data>
-								<key>Size</key>
-								<integer>21870</integer>
-							</dict>
 							<key>files/stacks-image-9268316-254x307.png</key>
 							<dict>
 								<key>Digest</key>
@@ -247,6 +227,16 @@
 								</data>
 								<key>Size</key>
 								<integer>553274</integer>
+							</dict>
+							<key>files/stacks-image-a5b6257.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
+								</data>
+								<key>Size</key>
+								<integer>34013</integer>
 							</dict>
 							<key>files/stacks-image-b5d4a25-261x251.png</key>
 							<dict>
@@ -328,6 +318,16 @@
 								<key>Size</key>
 								<integer>36650</integer>
 							</dict>
+							<key>files/stacks-image-ce6b280.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
+								</data>
+								<key>Size</key>
+								<integer>19050</integer>
+							</dict>
 							<key>files/stacks-image-f24159b-261x251.png</key>
 							<dict>
 								<key>Digest</key>
@@ -372,11 +372,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								cvXot66aSlVq
-								K0qJudrhgw==
+								nYqQxZUrpx1r
+								MZp/7xasfA==
 								</data>
 								<key>Size</key>
-								<integer>178062</integer>
+								<integer>181656</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -392,11 +392,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OnUu4KioOib8
-								DVhb03OngA==
+								6jv2GuSGVLWY
+								AwHt1AbD5A==
 								</data>
 								<key>Size</key>
-								<integer>117569</integer>
+								<integer>119158</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
