--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -128,16 +128,6 @@
 								<key>Size</key>
 								<integer>338288</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
-								</data>
-								<key>Size</key>
-								<integer>13349</integer>
-							</dict>
 							<key>files/stacks-image-7284e23-250x256.png</key>
 							<dict>
 								<key>Digest</key>
@@ -198,16 +188,6 @@
 								<key>Size</key>
 								<integer>75276</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
-								</data>
-								<key>Size</key>
-								<integer>21870</integer>
-							</dict>
 							<key>files/stacks-image-9e3cec5-98x150.png</key>
 							<dict>
 								<key>Digest</key>
@@ -217,6 +197,16 @@
 								</data>
 								<key>Size</key>
 								<integer>12547</integer>
+							</dict>
+							<key>files/stacks-image-a5b6257.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
+								</data>
+								<key>Size</key>
+								<integer>34013</integer>
 							</dict>
 							<key>files/stacks-image-baa9fbc-250x256.png</key>
 							<dict>
@@ -277,6 +267,16 @@
 								</data>
 								<key>Size</key>
 								<integer>353790</integer>
+							</dict>
+							<key>files/stacks-image-ce6b280.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
+								</data>
+								<key>Size</key>
+								<integer>19050</integer>
 							</dict>
 							<key>files/stacks-image-eeb0773-250x256.png</key>
 							<dict>
@@ -342,11 +342,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								x/IRdu1ipD6L
-								ZGkXwSC7HQ==
+								Fzk65Upicy7b
+								qRlvclmmUg==
 								</data>
 								<key>Size</key>
-								<integer>127944</integer>
+								<integer>131536</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -362,11 +362,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7xhG2XWAiQoD
-								Vh5FNemilA==
+								KnW/x2FpKVKG
+								PWNPtQcJpg==
 								</data>
 								<key>Size</key>
-								<integer>66270</integer>
+								<integer>66389</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
