--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-06T16:07:27Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -94,11 +94,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WNYrWgw4gMan
-								tiFFTLkLNg==
+								MvaikHZ2exbA
+								utrsO74CSQ==
 								</data>
 								<key>Size</key>
-								<integer>60972</integer>
+								<integer>60960</integer>
 							</dict>
 							<key>files/stacks-image-3bd846c-1200x636.jpg</key>
 							<dict>
@@ -164,11 +164,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								9PvQX6p2gK24
+								MtdUm5mMaw==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>21858</integer>
 							</dict>
 							<key>files/stacks-image-ae82c9c.jpg</key>
 							<dict>
@@ -234,8 +234,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vyV44WfxxGSl
-								OorUgjiT3Q==
+								FgDSTtHZVs0/
+								STz3Vs24cA==
 								</data>
 								<key>Size</key>
 								<integer>72496</integer>
