--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -130,16 +130,6 @@
 								<key>Size</key>
 								<integer>340983</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
-								</data>
-								<key>Size</key>
-								<integer>13349</integer>
-							</dict>
 							<key>files/stacks-image-6298502.png</key>
 							<dict>
 								<key>Digest</key>
@@ -170,15 +160,15 @@
 								<key>Size</key>
 								<integer>239632</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
+							<key>files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>34013</integer>
 							</dict>
 							<key>files/stacks-image-ae20feb-500x500.jpg</key>
 							<dict>
@@ -230,6 +220,16 @@
 								<key>Size</key>
 								<integer>27178</integer>
 							</dict>
+							<key>files/stacks-image-ce6b280.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
+								</data>
+								<key>Size</key>
+								<integer>19050</integer>
+							</dict>
 							<key>files/stacks-image-d2c4351-164x250.png</key>
 							<dict>
 								<key>Digest</key>
@@ -254,11 +254,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jGjWZ3c4L7A4
-								DoYZIrottg==
+								ft/krluy4dXr
+								Xyu+3Rg46A==
 								</data>
 								<key>Size</key>
-								<integer>148739</integer>
+								<integer>151157</integer>
 							</dict>
 							<key>files/stacks_page_page53.js</key>
 							<dict>
@@ -274,11 +274,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qOSchvu8aOau
-								6y64RJEVDg==
+								hG4R5ZI5GpN7
+								jJ+ZzNThyg==
 								</data>
 								<key>Size</key>
-								<integer>83726</integer>
+								<integer>84737</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
