--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-Big-Spread002C-Big-Dead/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/07-Big-Spread002C-Big-Dead/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -48,35 +48,35 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<key>files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>34013</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
+							<key>files/stacks-image-ce6b280.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>19050</integer>
 							</dict>
 							<key>files/stacks_page_page21.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								yGc5HQDQKHVE
-								zkK2BYk6Ow==
+								GZy5eZgcdJW+
+								OpQzh19CLg==
 								</data>
 								<key>Size</key>
-								<integer>95070</integer>
+								<integer>97488</integer>
 							</dict>
 							<key>files/stacks_page_page21.js</key>
 							<dict>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ihWkUsSaKWYb
-								bNNSJqSpLw==
+								pT+uCMBuLS0V
+								lKlaedA+lg==
 								</data>
 								<key>Size</key>
-								<integer>35034</integer>
+								<integer>36045</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
