--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/11-Idea-Collider/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/11-Idea-Collider/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -68,26 +68,6 @@
 								<key>Size</key>
 								<integer>44301</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
-								</data>
-								<key>Size</key>
-								<integer>13349</integer>
-							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
-								</data>
-								<key>Size</key>
-								<integer>21870</integer>
-							</dict>
 							<key>files/stacks-image-9911c1e-150x72.png</key>
 							<dict>
 								<key>Digest</key>
@@ -98,15 +78,35 @@
 								<key>Size</key>
 								<integer>13018</integer>
 							</dict>
+							<key>files/stacks-image-a5b6257.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
+								</data>
+								<key>Size</key>
+								<integer>34013</integer>
+							</dict>
+							<key>files/stacks-image-ce6b280.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
+								</data>
+								<key>Size</key>
+								<integer>19050</integer>
+							</dict>
 							<key>files/stacks_page_page37.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								xzEEuh2mjrM3
-								M2cBmn+dLA==
+								FWKqDdbG6ESd
+								qSYS+mgwAA==
 								</data>
 								<key>Size</key>
-								<integer>94357</integer>
+								<integer>96775</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/3AfSKaUr01O
-								Ib2fRTx9pA==
+								P5PhXW5HRvVa
+								C4ddIvBxSQ==
 								</data>
 								<key>Size</key>
-								<integer>37893</integer>
+								<integer>37250</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
