--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/13-Community-Lectures/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/13-Community-Lectures/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -98,35 +98,35 @@
 								<key>Size</key>
 								<integer>91743</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<key>files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>34013</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
+							<key>files/stacks-image-ce6b280.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>19050</integer>
 							</dict>
 							<key>files/stacks_page_page45.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								AduOF9VsdMdf
-								sThgCaVx7Q==
+								WM7+La0ch41+
+								TTLZtgld0g==
 								</data>
 								<key>Size</key>
-								<integer>96487</integer>
+								<integer>97825</integer>
 							</dict>
 							<key>files/stacks_page_page45.js</key>
 							<dict>
@@ -142,11 +142,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								aoOPnptbmlaf
-								WTLi5NR4UQ==
+								D4nBLupwFUTA
+								nVLCem7lCA==
 								</data>
 								<key>Size</key>
-								<integer>40090</integer>
+								<integer>39267</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
