--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -42,11 +42,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YIsEHC9R6RNE
-								4lyjJ2WDPw==
+								NVvbuxUQSOHX
+								UEICK+/ytw==
 								</data>
 								<key>Size</key>
-								<integer>52474</integer>
+								<integer>52015</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
@@ -118,35 +118,35 @@
 								<key>Size</key>
 								<integer>78092</integer>
 							</dict>
-							<key>index_files/stacks-image-580baf6-248x248.jpg</key>
+							<key>index_files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>34013</integer>
 							</dict>
-							<key>index_files/stacks-image-90966db-250x250.png</key>
+							<key>index_files/stacks-image-ce6b280.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>19050</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								5UBeQ8mSfjuy
-								bdeBTH8ckg==
+								4H+J/O838OU0
+								L+vfIxOMiw==
 								</data>
 								<key>Size</key>
-								<integer>118473</integer>
+								<integer>120891</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.js</key>
 							<dict>
