--- a/vermontcomplexsystems-foundation.rw/Pages/11-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/4-Credits/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/11-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/4-Credits/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -88,35 +88,35 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<key>files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>34013</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
+							<key>files/stacks-image-ce6b280.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>19050</integer>
 							</dict>
 							<key>files/stacks_page_page8.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								JhwcgWKiRuuj
-								d+Ko8PAOQg==
+								tW94z289GJSh
+								2XHzl5/8BQ==
 								</data>
 								<key>Size</key>
-								<integer>95842</integer>
+								<integer>98238</integer>
 							</dict>
 							<key>files/stacks_page_page8.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								e7o9I9auadm2
-								QrxASq/8Fw==
+								6FVXifTSBo8e
+								DAMVFHWsjQ==
 								</data>
 								<key>Size</key>
-								<integer>40031</integer>
+								<integer>41030</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
