--- a/vermontcomplexsystems-foundation.rw/Pages/11-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/5-Contact/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/11-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/5-Contact/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -60,35 +60,35 @@
 								<key>Size</key>
 								<integer>297644</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<key>files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>34013</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
+							<key>files/stacks-image-ce6b280.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>19050</integer>
 							</dict>
 							<key>files/stacks_page_page43.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								kpz659Fq2NaZ
-								RO6mnkrq/w==
+								KkQLr4fYEHHx
+								yS+EXl/Ubg==
 								</data>
 								<key>Size</key>
-								<integer>94165</integer>
+								<integer>108640</integer>
 							</dict>
 							<key>files/stacks_page_page43.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+WTBi5yD7OSl
-								Xdpj5t71JA==
+								TJCn+vhGnh0K
+								33Li0DVi+w==
 								</data>
 								<key>Size</key>
-								<integer>34989</integer>
+								<integer>37643</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
