--- a/vermontcomplexsystems-foundation.rw/Pages/12-404/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/12-404/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T21:30:39Z</date>
+						<date>2018-08-03T17:11:23Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -68,35 +68,35 @@
 								<key>Size</key>
 								<integer>124861</integer>
 							</dict>
-							<key>files/stacks-image-580baf6-248x248.jpg</key>
+							<key>files/stacks-image-a5b6257.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								OGSW8MSxffNf
-								eqQN8VH97Q==
+								hAKSIa3+ZrXU
+								vEdJbNZi4g==
 								</data>
 								<key>Size</key>
-								<integer>13349</integer>
+								<integer>34013</integer>
 							</dict>
-							<key>files/stacks-image-90966db-250x250.png</key>
+							<key>files/stacks-image-ce6b280.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								YpjTgVVBaf31
-								xzRYJpWpzQ==
+								u9ob8sB2NjIW
+								EKKV5jmImQ==
 								</data>
 								<key>Size</key>
-								<integer>21870</integer>
+								<integer>19050</integer>
 							</dict>
 							<key>files/stacks_page_page44.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								fx/NiWBX27vq
-								V5IYkdw2Qw==
+								dxu6oZZrkIyo
+								R4T3PEf9nQ==
 								</data>
 								<key>Size</key>
-								<integer>91081</integer>
+								<integer>93499</integer>
 							</dict>
 							<key>files/stacks_page_page44.js</key>
 							<dict>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								l2458kMCf+9B
-								MRooG92iOg==
+								coO6evMc59BX
+								NsGqFUwFpw==
 								</data>
 								<key>Size</key>
-								<integer>32560</integer>
+								<integer>33571</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
