Added CNWW student project outline
Added CNWW student project outline

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -41,17 +41,17 @@
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PFD for participants HWB Agenda.pdf</string>
+							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
 							<key>identifier</key>
-							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
+							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
 						<dict>
 							<key>fullPath</key>
-							<string>PDF For Participants SOS Symposium 2018 schedule.pdf</string>
+							<string>PFD for participants HWB Agenda.pdf</string>
 							<key>identifier</key>
-							<string>7A6F9ECD-FC22-4884-B91E-57B9A76DB313</string>
+							<string>5F8068D5-0482-4102-A77A-1856EF09FAEE</string>
 							<key>isInternal</key>
 							<true/>
 						</dict>
@@ -5838,7 +5838,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-08-06T22:16:02Z</date>
+						<date>2018-08-06T22:50:40Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6193,26 +6193,6 @@
 								<key>Size</key>
 								<integer>354232</integer>
 							</dict>
-							<key>files/stacks-image-cfb5234-98x98.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								uIa+ZpRMODfY
-								8L1symw+qA==
-								</data>
-								<key>Size</key>
-								<integer>6246</integer>
-							</dict>
-							<key>files/stacks-image-cfb5234-98x98@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								oL3dMLrPIItY
-								AkFFEoSKHQ==
-								</data>
-								<key>Size</key>
-								<integer>7818</integer>
-							</dict>
 							<key>files/stacks-image-d36e992-250x322.png</key>
 							<dict>
 								<key>Digest</key>
@@ -6307,11 +6287,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LqWjeF/LWVTP
-								ZStRXswFMQ==
+								gXH2Ra50qOF5
+								NR9XPq6LuQ==
 								</data>
 								<key>Size</key>
-								<integer>130304</integer>
+								<integer>132736</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10101,7 +10081,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HAjIATAGQCgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HAjIQhhIqcgAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -10112,7 +10092,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCMgBMAZmaA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcCMhCGEh4eA
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
